# project-evolution

./: Cargo.toml  README.md  RUN.md  build.rs
.github/workflows/: ci.yaml  release.yaml
src/: creature.rs  evolver.rs  lib.rs  main.rs  res.rs  simulation.rs  simulator.rs  ui.rs  util.rs
src/creature/: creature.rs  creature_colors.rs  movement_parameters.rs  muscle.rs  node.rs  position.rs
