[package]
name = "project-evolution"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
egui = "0.19.0"
eframe = "0.19.0"
image = "0.24.5"
rand = "0.8.5"
rapier = {package = "rapier2d", version = "0.16.1"}

[profile.dev.package.rapier2d]
opt-level = 3
